<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="runtimeTextExample" translatable="false">1h 52m</string>
    <string name="genreText" translatable="false">Genre</string>
    <string name="overviewText">Overview</string>
    <string name="lorem_ipsum" translatable="false">lorem ipsum dskksadlakldklksdkskdo askdlksdks askdskdksl ksldlkalkcalkl adlskdl akdlskdlsl asdklskdlkalk sdklskdladklks asdklskdlkalkldkslk akdlskdlklklak sdklakdlkslk lsdlkalklakca adklskdlalk askdlskadlkalk aldklskadlksaldk</string>
    <string name="budgetText">Budget</string>
    <string name="budgetTextExample" translatable="false">$123.000.000</string>
    <string name="revenue">Revenue</string>
    <string name="keywordsText" translatable="false">Keywords</string>
    <string name="runtimeText">Runtime</string>
    <string name="releasedTextExample" translatable="false">October 2018</string>
    <string name="releasedText">Released</string>
    <string name="movie_title">Movie Title</string>
    <string name="moviePosterContentDesc">This is the poster of the movie</string>
    <string name="castPhotoContentDesc">This is the photo of the cast</string>
    <string name="status" translatable="false">Status</string>
    <string name="type">Type</string>
    <string name="original_language">Original Language</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="change_language">Change Language</string>
    <string name="content_not_available">This content is not available in your language</string>

    <string name="runtimeField">%d h %d m</string>
    <string name="runtimeMinutesOnly">%d minutes</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="data_failed_to_load">Data failed to load!</string>
    <string name="retry">RETRY</string>
    <string name="dismiss">Dismiss</string>
    <string name="data_not_ready_warning">Data isn\'t ready yet! Please wait until data fully loaded</string>
    <string name="remove_fav_alert_dialog_title">Remove from Favorite?</string>
    <string name="remove_fav_alert_dialog_message">Are you sure you want to remove this item from favorite?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error_internet_disconnected">Error: Internet Disconnected</string>
    <string name="favorite">Favorite</string>
    <string name="data_might_be_stale">This data is retrieved from database, therefore it might be stale</string>
    <string name="refresh">Refresh</string>
    <string name="notify_when_online">Notify me when online</string>
    <string name="load_data">Load Data</string>
    <string name="we_online">We\'re online!</string>
    <string name="title_notification_load_data">Saving To DB</string>
    <string name="status_fetching_data_from_API">Status: Fetching data for other locale from API</string>
    <string name="status_loaded_digital_show">Status: Loaded Digital Show Details From API</string>
    <string name="status_loaded_cast">Status: Loaded Cast Data From API</string>
    <string name="status_loaded_keywords">Status: Loaded Keyword Data From API</string>
    <string name="status_saved_to_DB">Status: Saved To DB</string>
    <string name="status_failed_fetch_API_data">Status: Failed to Fetch data from API</string>
    <string name="status_load_data_finish">Status: All data Loaded and Saved</string>
    <string name="channel_name">Data Load Channel</string>
    <string name="search">Search</string>
    <string name="search_hint">Movie or Tv Show title..</string>
    <string name="empty_text">No Data</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notification</string>

    <!-- Sync Preferences -->
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="release_reminder_title">Release Today Reminder</string>
    <string name="miss_you">We miss you, please come back</string>
    <string name="locale_changed">Locale changed, data will reload!</string>
    <string name="daily_reminder_switch_key">daily</string>
    <string name="release_today_reminder_switch_key">release</string>
</resources>

