<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_languange"
        android:icon="@drawable/ic_change_language_24dp"
        android:title="@string/change_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>